feat: 重构数据预处理模块并优化训练流程
- 重构数据预处理模块，合并数据集加载逻辑
- 优化训练脚本，支持结构化日志记录
- 改进网格搜索实现，增强结果解析能力
- 更新配置文件结构，统一参数命名
- 添加.gitignore忽略规则和文档说明

--- a/config/unified.yaml
+++ b/config/unified.yaml
@@ -37,9 +37,9 @@ gpu:
   device_ids: "2,3"
   auto_select: true
 
-# 模型配置（网格搜索时由model_type参数动态设置）
+# 模型配置
 model:
-  type: null  # 将由网格搜索的model_type参数覆盖
+  type: "resnet18"
   params: {}
 
 # 损失函数配置
