refactor(训练流程): 移除网格搜索相关参数和逻辑
简化训练流程，移除与网格搜索相关的参数和条件判断
调整超参数配置中的batch_size和epochs值
添加debug_grid.py用于调试网格搜索参数生成

--- a/config/grid.yaml
+++ b/config/grid.yaml
@@ -4,7 +4,8 @@
 # 超参数配置
 hyperparameters:
   learning_rate: 0.001
-  batch_size: 256
+  # 256/4G显存
+  batch_size: 2560
   epochs: 3
   dropout: 0.1
 
@@ -67,7 +68,7 @@ grid_search:
     learning_rate: [0.001]
     batch_size: [256]
     dropout: [0.1]
-    epochs: [3]
+    epochs: [5]
     model_type: ["resnet18", "resnet50", "efficientnet_b0"]
   
   # 网格搜索设置
