--- a/config/grid.yaml
+++ b/config/grid.yaml
@@ -1,6 +1,3 @@
-# 网格搜索统一配置文件
-# 所有训练都通过网格搜索模式进行
-
 # 训练配置
 training:
   experiment_name: "default_exp"
@@ -30,8 +27,6 @@ gpu:
   device_ids: "2,3"
   auto_select: true
 
-
-
 # 多卡训练配置
 multi_gpu:
   enabled: true
@@ -44,10 +39,8 @@ parallel_jobs: 1
 save_results: true
 results_file: "grid_search_results.csv"
 
-
-# 网格搜索配置
+# 网格搜索超参数
 grid_search:
-  # 网格搜索参数定义（所有超参数都在这里配置）
   grid:
     # 模型相关参数
     model_name: ["resnet18", "resnet50", "efficientnet_b0"]
