feat(video): 添加UCF-101视频帧数据集支持并优化训练配置
新增视频帧数据集加载模块，支持从预处理帧图像加载UCF-101数据
重构配置文件结构，删除旧配置并添加新的视频训练和网格搜索配置
优化base_trainer测试日志输出，增加训练批次信息
扩展config_parser支持嵌套参数覆盖
更新dataloader_factory以支持新视频数据集类型

--- a/config/video.yaml
+++ b/config/video.yaml
@@ -37,7 +37,7 @@ multi_gpu:
 # 超参数配置
 hyperparameters:
   learning_rate: 0.001
-  batch_size: 256  # 视频数据通常需要更小的batch size
+  batch_size: 256  # 384
   epochs: 2
   weight_decay: 0.0001
   dropout: 0.2
