--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -20,34 +20,10 @@ data:
   params:
     clip_len: 16      # 每个视频片段的帧数
 
-# 模型配置（基础配置，会被网格搜索覆盖）
+# 模型配置（仅保留必要的基础参数）
 model:
-  type: r3d_18        # 默认使用3D ResNet-18模型
   params:
     num_classes: 101  # UCF-101有101个动作类别
-
-# 超参数配置（基础配置，会被网格搜索覆盖）
-hyperparameters:
-  batch_size: 128      # 批大小
-  learning_rate: 0.001 # 学习率
-  epochs: 10          # 训练轮数
-
-# 优化器配置（基础配置，会被网格搜索覆盖）
-optimizer:
-  name: adam          # 使用Adam优化器
-  params:
-    weight_decay: 0.0001 # 权重衰减
-
-# 学习率调度器配置（基础配置，会被网格搜索覆盖）
-scheduler:
-  name: cosine        # 使用余弦退火调度器
-  params:
-    T_max: 50         # 最大轮数
-    eta_min: 0.00001  # 最小学习率
-
-# 损失函数配置（基础配置，会被网格搜索覆盖）
-loss:
-  name: crossentropy  # 交叉熵损失
 
 # GPU配置
 gpu:
@@ -70,12 +46,24 @@ results_file: "video_grid_search_results.csv"
 grid_search:
   grid:
     # 模型相关参数（主要搜索内容）
-    model.type: ["r3d_18", "mc3_18","r2plus1d_18"]
+    model.type: [
+      "r3d_18", "mc3_18", "r2plus1d_18", "s3d",
+      "mvit_v1_b", "mvit_v2_s",
+      "swin3d_b", "swin3d_s", "swin3d_t"
+    ] 
+    # [
+    #   "r3d_18", "mc3_18", "r2plus1d_18", "s3d",
+    #   "mvit_v1_b", "mvit_v2_s",
+    #   "swin3d_b", "swin3d_s", "swin3d_t"
+    # ]
     
     # 超参数
     hyperparameters.learning_rate: [0.001]
-    hyperparameters.batch_size: [128]
-    hyperparameters.epochs: [5]
+    # batch_size支持两种模式：
+    # 1. 单一值：所有模型使用相同的batch_size，如 [128]
+    # 2. 对应数组：与model.type数量相同，按顺序对应每个模型的batch_size
+    hyperparameters.batch_size: [128, 128, 128, 32, 16, 16, 16, 16, 16]
+    hyperparameters.epochs: [10]
     
     # 优化器参数
     optimizer.name: ["adam"]
