refactor(config): 将配置中的hyperparameters统一重命名为hp
简化配置参数命名，将hyperparameters统一改为hp以提高配置文件的简洁性
更新相关代码以适配新的配置键名

--- a/config/grid.yaml
+++ b/config/grid.yaml
@@ -4,7 +4,7 @@ training:
   save_model: true
   model_save_path: "models/model.pth"
 
-# SwanLab配置
+# 实验记录 SwanLab配置
 swanlab:
   project_name: "training_framework"
   description: "深度学习训练实验"
