--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -58,12 +58,12 @@ grid_search:
     # ]
     
     # 超参数
-    hyperparameters.learning_rate: [0.001]
+    hp.learning_rate: [0.001]
     # batch_size支持两种模式：
     # 1. 单一值：所有模型使用相同的batch_size，如 [128]
     # 2. 对应数组：与model.type数量相同，按顺序对应每个模型的batch_size
-    hyperparameters.batch_size: [128, 128, 128, 32, 16, 16, 16, 16, 16]
-    hyperparameters.epochs: [10]
+    hp.batch_size: [128, 128, 128, 32, 16, 16, 16, 16, 16]
+    hp.epochs: [10]
     
     # 优化器参数
     optimizer.name: ["adam"]
