refactor(config): 统一将experiment_name重命名为exp_name
简化配置参数命名，将training.experiment_name统一改为training.exp_name，保持命名一致性
更新相关脚本和文档中的参数引用
调整训练日志输出格式，移除冗余信息

--- a/config/grid.yaml
+++ b/config/grid.yaml
@@ -1,6 +1,6 @@
 # 训练配置
 training:
-  experiment_name: "default_exp"
+  exp_name: "default_exp"
   save_model: true
   model_save_path: "models/model.pth"
 
