--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -25,10 +25,10 @@ model:
   params:
     num_classes: 101  # UCF-101有101个动作类别
 
-# 超参数配置（统一参数，不参与网格搜索）
+# 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 20           # 训练轮数
-  data_percentage: 1.0  # 使用数据的百分比
+  epochs: 2           # 训练轮数（固定值，不参与网格搜索）
+  # data_percentage 由命令行参数控制，不在此设置默认值
 
 # GPU配置
 gpu:
