feat(core): support explicit task_tag with backward compatibility
新增任务显式标识 `task.tag`，替代原隐式推断。
在 `base_trainer` 中加入 `SUPPORTED_TASKS`、自动推断旧配置、
数据集兼容性校验与任务驱动的统一模型创建流程。
同步更新现有配置并新增图像/视频分类示例配置及实施报告，
在保证向后兼容的前提下提升可读性与扩展性。

--- a/config/ucf101_video.yaml
+++ b/config/ucf101_video.yaml
@@ -1,6 +1,11 @@
 # UCF-101视频帧数据集训练配置
 # 使用预处理的帧图像进行训练，将val和test合并作为测试集
 
+# 任务配置
+task:
+  tag: "video_classification"
+  description: "UCF-101视频分类任务"
+
 # 训练配置
 training:
   exp_name: ucf101_video_r3d18 # 实验名称
