docs: 完善 EasyTrain 项目文档和开发者指南
- 新增 ALL_TASKS_COMPLETION_SUMMARY.md 总结重构工作和任务完成情况
- 新增 CONFIG_PARSER_ANALYSIS.md 分析配置解析器复杂度并提出简化方案
- 新增 DEVELOPER_GUIDE.md 详细说明项目结构、开发流程和最佳实践
- 新增 REFACTORING_COMPLETION_REPORT.md 报告重构过程和成果
- 更新现有配置文件结构，创建示例配置目录
- 优化模型创建接口，统一模型注册表
- 部分完成配置解析器简化工作
- 暂缓数据集接口统一工作，留作后续优化项目

--- a/config/grid.yaml
+++ b/config/grid.yaml
@@ -1,18 +1,21 @@
+# 图像分类网格搜索配置
+# 用于CIFAR-10数据集的超参数网格搜索
+
 # 任务配置
 task:
   tag: "image_classification"
-  description: "CIFAR-10图像分类任务"
+  description: "CIFAR-10图像分类网格搜索"
 
 # 训练配置
 training:
-  exp_name: "default_exp"
+  exp_name: "cifar10_grid_exp"
   save_model: true
-  model_save_path: "models/model.pth"
+  model_save_path: "models/image_model.pth"
 
 # 实验记录 SwanLab配置
 swanlab:
-  project_name: "training_framework"
-  description: "深度学习训练实验"
+  project_name: "EasyTrain-Image-Grid"
+  description: "CIFAR-10图像分类网格搜索实验"
 
 # 数据配置
 data:
