--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -45,6 +45,20 @@ multi_gpu:
   enabled: true
   strategy: "ddp"
 
+# 模型选择配置
+models_to_train:
+  # 启用要训练的模型列表，注释掉不需要训练的模型
+  - "s3d"
+  - "mvit_v1_b"
+  - "mvit_v2_s"
+  - "swin3d_b"
+  - "swin3d_s"
+  - "swin3d_t"
+  # 可选的其他模型（当前已注释）
+  # - "r3d_18"
+  # - "mc3_18"
+  # - "r2plus1d_18"
+
 # 网格搜索设置
 max_experiments: 20
 continue_on_error: true
@@ -71,7 +85,7 @@ grid_search:
     # 1. 单一值：所有模型使用相同的batch_size，如 [128]
     # 2. 对应数组：与model.type数量相同，按顺序对应每个模型的batch_size
     # 根据模型复杂度和内存需求优化的batch_size配置：
-    hp.batch_size: [96, 36, 32, 16, 16, 16]
+    hp.batch_size: [128, 36, 32, 16, 16, 16]
 
     # 超参数
     hp.learning_rate: [0.001]
