--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -49,8 +49,8 @@ multi_gpu:
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
   - "s3d"
-  - "mvit_v1_b"
-  - "mvit_v2_s"
+  # - "mvit_v1_b"
+  # - "mvit_v2_s"
   - "swin3d_b"
   - "swin3d_s"
   - "swin3d_t"
