--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -76,8 +76,7 @@ grid_search:
     #   "swin3d_b", "swin3d_s", "swin3d_t"
     # ] 
     model.type: [
-      "s3d",
-      "mvit_v1_b", "mvit_v2_s",
+      "s3d", "mvit_v1_b", "mvit_v2_s",
       "swin3d_b", "swin3d_s", "swin3d_t"
     ] 
 
