--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -48,9 +48,9 @@ multi_gpu:
 # 模型选择配置
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
-  - "r3d_18"
-  - "mc3_18"
-  - "r2plus1d_18"
+  # - "r3d_18"
+  # - "mc3_18"
+  # - "r2plus1d_18"
   - "s3d"
   - "mvit_v1_b"
   - "mvit_v2_s"
