--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -51,7 +51,7 @@ models_to_train:
   # - "r3d_18"
   # - "mc3_18"
   # - "r2plus1d_18"
-  - "s3d"
+  # - "s3d"
   - "mvit_v1_b"
   - "mvit_v2_s"
   - "swin3d_b"
@@ -66,42 +66,56 @@ parallel_jobs: 1
 save_results: true
 results_file: "video_grid_search_results.csv"
 
-# 网格搜索超参数
+# 网格搜索超参数 - 分组式配置
 grid_search:
-  grid:
-    # 模型相关参数（主要搜索内容）
-    model.type: [
-      "r3d_18", "mc3_18", "r2plus1d_18", 
-      "s3d", "mvit_v1_b", "mvit_v2_s",
-      "swin3d_b", "swin3d_s", "swin3d_t"
-    ]
-
-    hp.batch_size: [
-    128, 128, 128,
-    128, 36, 32, 
-    16, 16, 16]
-
-    # batch_size支持两种模式：
-    # 1. 单一值：所有模型使用相同的batch_size，如 [128]
-    # 2. 对应数组：与model.type数量相同，按顺序对应每个模型的batch_size
-    # 根据模型复杂度和内存需求优化的batch_size配置：
-
-    # model.type: [
-    #   "s3d", "mvit_v1_b", "mvit_v2_s",
-    #   "swin3d_b", "swin3d_s", "swin3d_t"
-    # ] 
-
-    # hp.batch_size: [128, 36, 32, 16, 16, 16]
-
-    # 超参数
-    hp.learning_rate: [0.001]
+  # 分组式搜索：每组模型有自己的超参数搜索范围
+  groups:
+    # 轻量级3D CNN模型组 - 使用统一batch_size
+    light_3d_cnn:
+      model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
+      hp.batch_size: [128]  # 统一batch_size，会自动扩充为 [128, 128, 128]
+      hp.learning_rate: [0.001]
+      optimizer.name: ["adam"]
+      optimizer.params.weight_decay: [0.0001]
+      scheduler.name: ["cosine"]
+      loss.name: ["crossentropy"]
     
-    # 优化器参数
-    optimizer.name: ["adam"]
-    optimizer.params.weight_decay: [0.0001]
+    # 复杂3D CNN模型组 - 单模型，多batch_size选择
+    complex_3d_cnn:
+      model.type: ["s3d"]
+      hp.batch_size: [128]  # S3D需要小batch_size
+      hp.learning_rate: [0.01]  # 测试不同学习率
+      optimizer.name: ["adam"]  # S3D用Adam即可
+      optimizer.params.weight_decay: [0.0001]  # 适中的权重衰减
+      scheduler.name: ["cosine"]  # cosine和step调度
+      loss.name: ["crossentropy"]
     
-    # 调度器参数
-    scheduler.name: ["cosine"]
+    # Transformer模型组 - 精确配对batch_size，使用适合的调度策略
+    transformer_models:
+      model.type: ["mvit_v1_b", "mvit_v2_s"]
+      hp.batch_size: [36, 32]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
+      hp.learning_rate: [0.01, 0.001]  # 降低学习率，更稳定
+      optimizer.name: ["adamw"]  # Transformer首选AdamW
+      optimizer.params.weight_decay: [0.01]  # 适中的权重衰减
+      scheduler.name: ["linear", "cosine"]  # 首选linear decay，次选cosine
+      loss.name: ["crossentropy"]
     
-    # 损失函数
-    loss.name: ["crossentropy"]
+    # Swin3D模型组 - 精确配对batch_size，使用适合的调度策略
+    swin3d_models:
+      model.type: ["swin3d_b", "swin3d_s", "swin3d_t"]
+      hp.batch_size: [16, 16, 16]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
+      hp.learning_rate: [0.01, 0.001]  # 保守的学习率
+      optimizer.name: ["adamw"]  # Swin系列推荐AdamW
+      optimizer.params.weight_decay: [0.05]  # Swin系列用更大的weight_decay
+      scheduler.name: ["linear", "cosine"]  # 首选linear decay，次选cosine
+      loss.name: ["crossentropy"]
+
+  # # 兼容旧格式的grid配置（如果groups不存在时使用）
+  # grid:
+  #   model.type: ["r3d_18", "mc3_18", "r2plus1d_18", "s3d", "mvit_v1_b", "mvit_v2_s", "swin3d_b", "swin3d_s", "swin3d_t"]
+  #   hp.batch_size: [128, 128, 128, 128, 36, 32, 16, 16, 16]
+  #   hp.learning_rate: [0.001]
+  #   optimizer.name: ["adam"]
+  #   optimizer.params.weight_decay: [0.0001]
+  #   scheduler.name: ["cosine"]
+  #   loss.name: ["crossentropy"]
