--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -32,7 +32,7 @@ model:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 5         # 训练轮数（固定值，不参与网格搜索）
+  epochs: 10         # 训练轮数（固定值，不参与网格搜索）
   # data_percentage 由命令行参数控制，不在此设置默认值
 
 # GPU配置
@@ -60,7 +60,7 @@ models_to_train:
   # 可选的其他模型（当前已注释）
 
 # 网格搜索设置
-max_experiments: 20
+max_experiments: 100
 continue_on_error: true
 parallel_jobs: 1
 save_results: true
@@ -94,20 +94,20 @@ grid_search:
     transformer_models:
       model.type: ["mvit_v1_b", "mvit_v2_s"]
       hp.batch_size: [36, 32]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
-      hp.learning_rate: [0.01, 0.001]  # 降低学习率，更稳定
+      hp.learning_rate: [0.001]  # 降低学习率，更稳定
       optimizer.name: ["adamw"]  # Transformer首选AdamW
       optimizer.params.weight_decay: [0.01]  # 适中的权重衰减
-      scheduler.name: ["linear", "cosine"]  # 首选linear decay，次选cosine
+      scheduler.name: ["cosine"]  # 首选linear decay，次选cosine
       loss.name: ["crossentropy"]
     
     # Swin3D模型组 - 精确配对batch_size，使用适合的调度策略
     swin3d_models:
       model.type: ["swin3d_b", "swin3d_s", "swin3d_t"]
       hp.batch_size: [16, 16, 16]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
-      hp.learning_rate: [0.01, 0.001]  # 保守的学习率
+      hp.learning_rate: [0.001, 0.0001]  # 保守的学习率
       optimizer.name: ["adamw"]  # Swin系列推荐AdamW
-      optimizer.params.weight_decay: [0.05]  # Swin系列用更大的weight_decay
-      scheduler.name: ["linear", "cosine"]  # 首选linear decay，次选cosine
+      optimizer.params.weight_decay: [0.01, 0.05]  # Swin系列用更大的weight_decay
+      scheduler.name: ["cosine"]  # 首选linear decay，次选cosine
       loss.name: ["crossentropy"]
 
   # # 兼容旧格式的grid配置（如果groups不存在时使用）
