--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -32,7 +32,7 @@ model:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 10         # 训练轮数（固定值，不参与网格搜索）
+  epochs: 5        # 训练轮数（固定值，不参与网格搜索）
   # data_percentage 由命令行参数控制，不在此设置默认值
 
 # GPU配置
@@ -90,24 +90,30 @@ grid_search:
       scheduler.name: ["cosine"]  # cosine和step调度
       loss.name: ["crossentropy"]
     
-    # Transformer模型组 - 精确配对batch_size，使用适合的调度策略
+    # Transformer模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
     transformer_models:
       model.type: ["mvit_v1_b", "mvit_v2_s"]
       hp.batch_size: [36, 32]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
       hp.learning_rate: [0.001]  # 降低学习率，更稳定
       optimizer.name: ["adamw"]  # Transformer首选AdamW
       optimizer.params.weight_decay: [0.01]  # 适中的权重衰减
-      scheduler.name: ["cosine"]  # 首选linear decay，次选cosine
+      scheduler.name: ["warmup_cosine", "cosine"]  # 首选Warmup + Cosine，次选纯Cosine
+      scheduler.params.warmup_epochs: [1, 2]  # Warmup期长度：1-2个epoch
+      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
+      scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
       loss.name: ["crossentropy"]
     
-    # Swin3D模型组 - 精确配对batch_size，使用适合的调度策略
+    # Swin3D模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
     swin3d_models:
       model.type: ["swin3d_b", "swin3d_s", "swin3d_t"]
       hp.batch_size: [16, 16, 16]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
       hp.learning_rate: [0.001, 0.0001]  # 保守的学习率
       optimizer.name: ["adamw"]  # Swin系列推荐AdamW
       optimizer.params.weight_decay: [0.01, 0.05]  # Swin系列用更大的weight_decay
-      scheduler.name: ["cosine"]  # 首选linear decay，次选cosine
+      scheduler.name: ["warmup_cosine", "cosine"]  # 首选Warmup + Cosine，次选纯Cosine
+      scheduler.params.warmup_epochs: [1, 2]  # Warmup期长度：1-2个epoch
+      scheduler.params.warmup_start_factor: [0.1, 0.2]  # Warmup起始学习率比例：10%-20%
+      scheduler.params.eta_min_factor: [0.01, 0.005]  # 最小学习率比例：1%-0.5%
       loss.name: ["crossentropy"]
 
   # # 兼容旧格式的grid配置（如果groups不存在时使用）
