feat(grid_search): 优化网格搜索结果文件命名和断点续传功能
- 修改结果文件命名逻辑，支持使用时间戳命名
- 移除断点续传功能，简化代码结构
- 优化实验结果保存流程，确保结果的一致性

--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -64,7 +64,7 @@ max_experiments: 100
 continue_on_error: true
 parallel_jobs: 1
 save_results: true
-results_file: "video_grid_search_results.csv"
+# results_file: "video_grid_search_results.csv"  # 注释掉以使用时间戳文件名
 
 # 网格搜索超参数 - 分组式配置
 grid_search:
