--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -48,10 +48,10 @@ multi_gpu:
 # 模型选择配置
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
-  - "r3d_18"
-  - "mc3_18"
+  # - "r3d_18"
+  # - "mc3_18"
   - "r2plus1d_18"
-  # - "s3d"
+  - "s3d"
   # - "mvit_v1_b"
   # - "mvit_v2_s"
   # - "swin3d_b"
@@ -73,9 +73,9 @@ grid_search:
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
       hp.batch_size: [128]  # 统一batch_size，会自动扩充为 [128, 128, 128]
-      hp.learning_rate: [0.001, 0.005]
+      hp.learning_rate: [0.001]
       optimizer.name: ["adamw"]
-      optimizer.params.weight_decay: [0.01, 0.05]
+      optimizer.params.weight_decay: [0.01]
       scheduler.name: ["warmup_cosine", "cosine"]
       scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
       scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
@@ -86,7 +86,7 @@ grid_search:
     complex_3d_cnn:
       model.type: ["s3d"]
       hp.batch_size: [128]  # S3D需要小batch_size
-      hp.learning_rate: [0.005]  # 测试不同学习率
+      hp.learning_rate: [0.001]  # 测试不同学习率
       optimizer.name: ["adamw"]  # S3D用Adam即可
       optimizer.params.weight_decay: [0.05]  # 适中的权重衰减
       scheduler.name: ["warmup_cosine", "cosine"]  # 首选Warmup + Cosine，次选纯Cosine
