--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -32,8 +32,7 @@ model:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 5        # 训练轮数（固定值，不参与网格搜索）
-  # data_percentage 由命令行参数控制，不在此设置默认值
+  epochs: 5
 
 # GPU配置
 gpu:
@@ -120,13 +119,3 @@ grid_search:
       scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例：10%-20%
       scheduler.params.eta_min_factor: [0.005]  # 最小学习率比例：1%-0.5%
       loss.name: ["crossentropy"]
-
-  # # 兼容旧格式的grid配置（如果groups不存在时使用）
-  # grid:
-  #   model.type: ["r3d_18", "mc3_18", "r2plus1d_18", "s3d", "mvit_v1_b", "mvit_v2_s", "swin3d_b", "swin3d_s", "swin3d_t"]
-  #   hp.batch_size: [128, 128, 128, 128, 36, 32, 16, 16, 16]
-  #   hp.learning_rate: [0.001]
-  #   optimizer.name: ["adam"]
-  #   optimizer.params.weight_decay: [0.0001]
-  #   scheduler.name: ["cosine"]
-  #   loss.name: ["crossentropy"]
