--- a/config/neonatal_multilabel_grid.yaml
+++ b/config/neonatal_multilabel_grid.yaml
@@ -21,7 +21,7 @@ swanlab:
 data:
   type: neonatal_multilabel  # 使用新的新生儿多标签数据集类型
   root: /home/swq/Code/Neonate-Feeding-Assessment/data/cpu_processed/frames_segments  # 数据集根目录
-  num_workers: 8       # 减少工作进程数，避免CPU和内存过载
+  num_workers: 12       # 减少工作进程数，避免CPU和内存过载
   params:
     clip_len: 16      # 每个视频片段的帧数
 
@@ -32,7 +32,7 @@ model:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 5
+  epochs: 20
 
 # GPU配置
 gpu:
@@ -50,12 +50,11 @@ models_to_train:
   - "r3d_18"
   - "mc3_18"
   - "r2plus1d_18"
-  # - "s3d"
-  # - "mvit_v1_b"
-  # - "mvit_v2_s"
-  # - "swin3d_b"
-  # - "swin3d_s"
-  # - "swin3d_t"
+  - "mvit_v1_b"
+  - "mvit_v2_s"
+  - "swin3d_b"
+  - "swin3d_s"
+  - "swin3d_t"
 
 # 网格搜索设置
 max_experiments: 50
@@ -71,15 +70,40 @@ grid_search:
     # 轻量级3D CNN模型组 - 使用更大的batch_size
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
-      hp.batch_size: [4]  # 使用更大的batch_size，128优先
-      hp.learning_rate: [0.001]
+      hp.batch_size: [64]  # 使用更大的batch_size，128优先
+      hp.learning_rate: [0.01, 0.005]  # 提高学习率，加快收敛
       optimizer.name: ["adamw"]
       optimizer.params.weight_decay: [0.001]
-      scheduler.name: ["warmup_cosine"]
-      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1个epoch
+      scheduler.name: ["step"]  # 使用更简单的调度器
+      scheduler.params.step_size: [2]  # 每2个epoch降低学习率
+      scheduler.params.gamma: [0.5]  # 学习率衰减因子
+      loss.name: ["multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.params.pos_weight: [2.0]  # 正样本权重，处理类别不平衡
+    # Transformer模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
+    transformer_models:
+      model.type: ["mvit_v1_b", "mvit_v2_s"]
+      hp.batch_size: [36, 32]  # 按顺序配对：mvit_v1_b用36，mvit_v2_s用32
+      hp.learning_rate: [0.001]  # 降低学习率，更稳定
+      optimizer.name: ["adamw"]  # Transformer首选AdamW
+      optimizer.params.weight_decay: [0.05]  # 适中的权重衰减
+      scheduler.name: ["warmup_cosine"]  # 首选Warmup + Cosine，次选纯Cosine
+      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
       scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
       scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
-      loss.name: ["multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.name: ["crossentropy"]
+    
+    # Swin3D模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
+    swin3d_models:
+      model.type: ["swin3d_b", "swin3d_s", "swin3d_t"]
+      hp.batch_size: [16, 16, 16]  # 按顺序配对：swin3d_b用4，swin3d_s用8，swin3d_t用16
+      hp.learning_rate: [0.001]  # 保守的学习率
+      optimizer.name: ["adamw"]  # Swin系列推荐AdamW
+      optimizer.params.weight_decay: [0.05]  # Swin系列用更大的weight_decay
+      scheduler.name: ["warmup_cosine"]  # 首选Warmup + Cosine，次选纯Cosine
+      scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
+      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例：10%-20%
+      scheduler.params.eta_min_factor: [0.005]  # 最小学习率比例：1%-0.5%
+      loss.name: ["crossentropy"]
 
 # 评估指标配置（暂时注释掉，使用默认指标）
 # metrics:
