--- a/config/neonatal_multilabel_grid.yaml
+++ b/config/neonatal_multilabel_grid.yaml
@@ -31,11 +31,11 @@ data:
 # 模型配置（仅保留必要的基础参数）
 model:
   params:
-    num_classes: 8  # 使用筛选后的类别数量（与top_n_classes保持一致）
+    num_classes: 7  # 使用筛选后的类别数量（与top_n_classes保持一致）
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 10
+  epochs: 5
 
 # GPU配置
 gpu:
@@ -50,9 +50,9 @@ multi_gpu:
 # 模型选择配置
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
-  # - "r3d_18"
-  # - "mc3_18"
-  # - "r2plus1d_18"
+  - "r3d_18"
+  - "mc3_18"
+  - "r2plus1d_18"
   - "mvit_v1_b"
   - "mvit_v2_s"
   # - "swin3d_b"
@@ -91,7 +91,7 @@ grid_search:
       scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
       scheduler.params.step_size: [5]  # 每5个epoch降低学习率（原来2→5，减缓衰减）
       scheduler.params.gamma: [0.8]  # 学习率衰减因子（原来0.5→0.8，减小衰减幅度）
-      loss.name: ["focal_multilabel_bce", "multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
       loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
       
     # Transformer模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
@@ -107,7 +107,7 @@ grid_search:
       scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
       scheduler.params.step_size: [5]  # 每5个epoch降低学习率（原来2→5，减缓衰减）
       scheduler.params.gamma: [0.8]  # 学习率衰减因子（原来0.5→0.8，减小衰减幅度）
-      loss.name: ["focal_multilabel_balanced", "focal_multilabel_bce", "multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
       loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
     
     # Swin3D模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
@@ -123,7 +123,7 @@ grid_search:
       scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
       scheduler.params.step_size: [5]  # 每5个epoch降低学习率（原来2→5，减缓衰减）
       scheduler.params.gamma: [0.8]  # 学习率衰减因子（原来0.5→0.8，减小衰减幅度）
-      loss.name: ["focal_multilabel_bce", "multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
       loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
 
 
