--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -23,12 +23,12 @@ data:
   root: data/ucf101   # 数据集根目录
   num_workers: 12      # 数据加载工作进程数
   params:
-    clip_len: 16      # 每个视频片段的帧数
+    clip_len: 32      # 每个视频片段的帧数
 
 # 模型配置（仅保留必要的基础参数）
-model:
-  params:
-    num_classes: 101  # UCF-101有101个动作类别
+# model:
+#   params:
+#     num_classes: 101  # UCF-101有101个动作类别
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
@@ -71,7 +71,7 @@ grid_search:
     # 轻量级3D CNN模型组 - 使用统一batch_size
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
-      hp.batch_size: [128]  # 统一batch_size，会自动扩充为 [128, 128, 128]
+      hp.batch_size: [64]  # 统一batch_size，会自动扩充为 [128, 128, 128]
       hp.learning_rate: [0.001]
       optimizer.name: ["adamw"]
       optimizer.params.weight_decay: [0.01]
