--- a/config/neonatal_multilabel_grid.yaml
+++ b/config/neonatal_multilabel_grid.yaml
@@ -23,7 +23,7 @@ data:
   root: /home/swq/Code/Neonate-Feeding-Assessment/data/cpu_processed/frames_segments  # 数据集根目录
   num_workers: 12       # 减少工作进程数，避免CPU和内存过载
   params:
-    clip_len: 16      # 每个视频片段的帧数
+    clip_len: 32      # 每个视频片段的帧数
     top_n_classes: 10  # 只使用样本数量前7多的类别，减少稀有类别干扰
     stratified_split: true  # 启用分层抽样，确保训练测试集类别分布一致
     min_samples_per_class: 10  # 类别最小样本数阈值
@@ -35,7 +35,7 @@ data:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 5
+  epochs: 10
 
 # GPU配置
 gpu:
@@ -53,8 +53,8 @@ models_to_train:
   - "r3d_18"
   - "mc3_18"
   - "r2plus1d_18"
-  - "mvit_v1_b"
-  - "mvit_v2_s"
+  # - "mvit_v1_b"
+  # - "mvit_v2_s"
   # - "swin3d_b"
   # - "swin3d_s"
   # - "swin3d_t"
@@ -82,17 +82,17 @@ grid_search:
     # - "exponential": 指数衰减，参数：gamma
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
-      hp.batch_size: [64]  # 使用更大的batch_size，128优先
+      hp.batch_size: [32]  # 使用更大的batch_size，128优先
       hp.learning_rate: [0.001]  # 提高学习率，加快收敛
       optimizer.name: ["adamw"]
-      optimizer.params.weight_decay: [0.05]
-      scheduler.name: ["warmup_cosine", "cosine"]  # 🔧 增加更多调度器选项
+      optimizer.params.weight_decay: [0.01]
+      scheduler.name: ["warmup_cosine"]  # 🔧 增加更多调度器选项
       scheduler.params.warmup_epochs: [2]  # 🔧 增加Warmup期长度：2个epoch
       scheduler.params.warmup_start_factor: [1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.3]  # 🔧 调整最小学习率：30%或50%（原来1%太低）
+      scheduler.params.eta_min_factor: [0.05]  # 🔧 调整最小学习率：30%或50%（原来1%太低）
       scheduler.params.step_size: [3]  # 每3或5个epoch降低学习率
       scheduler.params.gamma: [0.9]  # 🔧 更温和的学习率衰减因子
-      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
+      loss.name: ["focal_multilabel_bce"]  # "multilabel_bce", "focal_multilabel_balanced",  多标签二元交叉熵损失
       loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
       
     # Transformer模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
@@ -102,14 +102,14 @@ grid_search:
       hp.learning_rate: [0.001]  # 降低学习率，更稳定
       optimizer.name: ["adamw"]  # Transformer首选AdamW
       optimizer.params.weight_decay: [0.05]  # 适中的权重衰减
-      scheduler.name: ["warmup_cosine", "cosine"]  # 🔧 增加更多调度器选项
+      scheduler.name: ["warmup_cosine"]  # 🔧 增加更多调度器选项
       scheduler.params.warmup_epochs: [2]  # 🔧 增加Warmup期长度：2个epoch
       scheduler.params.warmup_start_factor: [1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.3]  # 🔧 调整最小学习率：30%或50%（原来1%太低）
+      scheduler.params.eta_min_factor: [0.05]  # 🔧 调整最小学习率：30%或50%（原来1%太低）
       scheduler.params.step_size: [3]  # 每3或5个epoch降低学习率
       scheduler.params.gamma: [0.9]  # 🔧 更温和的学习率衰减因子
-      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
-      loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
+      loss.name: ["focal_multilabel_bce"]  # "multilabel_bce", "focal_multilabel_balanced",  多标签二元交叉熵损失
+      loss.params.pos_weight: [10.0, 20.0, 30.0]  # 正样本权重，处理类别不平衡
     
     # Swin3D模型组 - 精确配对batch_size，使用Warmup + Cosine调度策略
     swin3d_models:
@@ -118,15 +118,14 @@ grid_search:
       hp.learning_rate: [0.001]  # 保守的学习率
       optimizer.name: ["adamw"]  # Swin系列推荐AdamW
       optimizer.params.weight_decay: [0.05]  # Swin系列用更大的weight_decay
-      scheduler.name: ["warmup_cosine", "step"]  # 🔧 增加step调度器选项
+      scheduler.name: ["warmup_cosine"]  # 🔧 增加更多调度器选项
       scheduler.params.warmup_epochs: [2]  # 🔧 增加Warmup期长度：2个epoch
-      scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
-      scheduler.params.eta_min_factor: [0.3, 0.5]  # 🔧 调整最小学习率：30%或50%
-      scheduler.params.step_size: [3, 5]  # 每3或5个epoch降低学习率
-      scheduler.params.gamma: [0.8, 0.9]  # 🔧 更温和的学习率衰减因子
-      loss.name: ["multilabel_bce", "focal_multilabel_balanced", "focal_multilabel_bce"]  # 多标签二元交叉熵损失
-      loss.params.pos_weight: [10.0]  # 正样本权重，处理类别不平衡
-
+      scheduler.params.warmup_start_factor: [1]  # Warmup起始学习率比例
+      scheduler.params.eta_min_factor: [0.05]  # 🔧 调整最小学习率：30%或50%（原来1%太低）
+      scheduler.params.step_size: [3]  # 每3或5个epoch降低学习率
+      scheduler.params.gamma: [0.9]  # 🔧 更温和的学习率衰减因子
+      loss.name: ["focal_multilabel_bce"]  # "multilabel_bce", "focal_multilabel_balanced",  多标签二元交叉熵损失
+      loss.params.pos_weight: [10.0, 20.0, 30.0]  # 正样本权重，处理类别不平衡
 
 # 评估指标配置（暂时注释掉，使用默认指标）
 # metrics:
