--- a/config/ucf101_video_grid.yaml
+++ b/config/ucf101_video_grid.yaml
@@ -24,6 +24,10 @@ data:
   num_workers: 12      # 数据加载工作进程数
   params:
     clip_len: 32      # 每个视频片段的帧数
+    # FPS采样配置（可选）
+    sampling_mode: "random"  # 采样模式: "random"（默认）或 "fps"
+    # target_fps: 8          # 目标采样帧率，仅在sampling_mode为"fps"时使用
+    # original_fps: 16       # 原始视频帧率，默认16fps
 
 # 模型配置（仅保留必要的基础参数）
 # model:
@@ -32,7 +36,7 @@ data:
 
 # 超参数配置（基础默认值，可被网格搜索和命令行覆盖）
 hp:
-  epochs: 5
+  epochs: 20
 
 # GPU配置
 gpu:
@@ -47,10 +51,10 @@ multi_gpu:
 # 模型选择配置
 models_to_train:
   # 启用要训练的模型列表，注释掉不需要训练的模型
-  # - "r3d_18"
-  # - "mc3_18"
+  - "r3d_18"
+  - "mc3_18"
   - "r2plus1d_18"
-  - "s3d"
+  # - "s3d"
   # - "mvit_v1_b"
   # - "mvit_v2_s"
   # - "swin3d_b"
@@ -75,7 +79,7 @@ grid_search:
       hp.learning_rate: [0.001]
       optimizer.name: ["adamw"]
       optimizer.params.weight_decay: [0.01]
-      scheduler.name: ["warmup_cosine", "cosine"]
+      scheduler.name: ["warmup_cosine"]
       scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
       scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
       scheduler.params.eta_min_factor: [0.01]  # 最小学习率为初始学习率的1%
@@ -87,7 +91,7 @@ grid_search:
       hp.batch_size: [128]  # S3D需要小batch_size
       hp.learning_rate: [0.001]  # 测试不同学习率
       optimizer.name: ["adamw"]  # S3D用Adam即可
-      optimizer.params.weight_decay: [0.05]  # 适中的权重衰减
+      optimizer.params.weight_decay: [0.01]  # 适中的权重衰减
       scheduler.name: ["warmup_cosine", "cosine"]  # 首选Warmup + Cosine，次选纯Cosine
       scheduler.params.warmup_epochs: [1]  # Warmup期长度：1-2个epoch
       scheduler.params.warmup_start_factor: [0.1]  # Warmup起始学习率比例
