``` feat(config): 更新数据集路径与标签文件配置
- 修改 neonatal_multilabel.yaml 和 neonatal_multilabel_grid.yaml 中的数据集根路径
 为 cpu_processed_627 版本，并使用相对路径引用
- 在两个配置文件中新增 labels_file 参数，指向 multi_hot_labels.xlsx
- 为 grid.yaml 配置增加 GPU 配置项，支持单卡训练自动选择设备

refactor(src): 重构数据加载器和训练逻辑以提升灵活性与健壮性

- dataloader_factory.py 支持从 config 动态读取数据路径和标签文件路径，
  并增强路径解析逻辑（绝对/相对路径兼容）
- 增加对空数据集的检测机制，在训练集或测试集为空时报错提示
- base_trainer.py 中调整学习率调度器调用时机，支持 batch 或 epoch 级别更新
- 修复训练过程中指标收集方式，改用 accelerator.gather_for_metrics 提高准确性
- 支持 Subset 包装数据集时正确获取类别数量，提高兼容性
- 增强 cleanup_and_return 函数对无效指标数据的安全处理

feat(scripts): 网格搜索脚本支持 GPU 设置及错误详细日志记录

- grid_search.py 中引入 setup_gpu_config 函数进行 GPU 初始化配置
- 进程内实验运行函数添加异常捕获和完整堆栈打印功能
- 结果返回结构中新增 error_type 字段便于问题分类排查
- 实验参数同步更新 data_percentage 到 hp 命名空间和根级字段
```

--- a/config/neonatal_multilabel.yaml
+++ b/config/neonatal_multilabel.yaml
@@ -20,7 +20,7 @@ swanlab:
 # 数据集配置
 data:
   type: neonatal_multilabel
-  root: /home/swq/Code/Neonate-Feeding-Assessment/data/cpu_processed/frames_segments
+  root: /home/swq/Neonate-Feeding-Assessment/data/cpu_processed_627/frames_segments
   num_workers: 12
   params:
     clip_len: 32
@@ -28,6 +28,7 @@ data:
     stratified_split: true
     min_samples_per_class: 10
     sampling_mode: "random"
+    labels_file: /home/swq/Neonate-Feeding-Assessment/result_xlsx/shanghai/multi_hot_labels.xlsx
     # target_fps: 8           # 若启用fps模式需要设置
     # original_fps: 16
 
@@ -42,6 +43,11 @@ hp:
   batch_size: 32
   learning_rate: 0.001
   epochs: 10
+
+# GPU配置
+gpu:
+  device_ids: "0"
+  auto_select: true
 
 # 优化器配置
 optimizer:
