--- a/config/neonatal_multilabel_grid.yaml
+++ b/config/neonatal_multilabel_grid.yaml
@@ -20,7 +20,7 @@ swanlab:
 # 数据配置
 data:
   type: neonatal_multilabel  # 使用新的新生儿多标签数据集类型
-  root: /home/swq/Code/Neonate-Feeding-Assessment/data/cpu_processed/frames_segments  # 数据集根目录
+  # root: /home/swq/Code/Neonate-Feeding-Assessment/data/cpu_processed/frames_segments  # 数据集根目录
   num_workers: 12       # 减少工作进程数，避免CPU和内存过载
   params:
     clip_len: 32      # 每个视频片段的帧数
@@ -82,7 +82,7 @@ grid_search:
     # - "exponential": 指数衰减，参数：gamma
     light_3d_cnn:
       model.type: ["r3d_18", "mc3_18", "r2plus1d_18"]
-      hp.batch_size: [32]  # 使用更大的batch_size，128优先
+      hp.batch_size: [128]  # 使用更大的batch_size，128优先
       hp.learning_rate: [0.001]  # 提高学习率，加快收敛
       optimizer.name: ["adamw"]
       optimizer.params.weight_decay: [0.01]
